--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 <div class="wrapper">
 	<div class="navbar container">
 		<a id="author-name" class="alignable pull-left" style="text-decoration:none"> Bruce Shuyue Jia</a>
+		<a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog"> Blog</a>
 	</div>
+	
 	<div style="clear:both"></div>
 
 <hr>
