--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <!--Web Title Shown-->
 <head>
-    <title>Shuyue Jia 贾舒越</title>
+    <title>Bruce Jia 贾舒越</title>
 	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +35,7 @@
 <!--Title-->
 <div class="wrapper">
 	<div class="navbar container">
-		<a id="author-name" class="alignable pull-left" style="text-decoration:none"> Bruce Shuyue Jia</a>
+		<a id="author-name" class="alignable pull-left" style="text-decoration:none"> Bruce Jia</a>
 		<a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog"> Blog</a>
 	</div>
 	
