--- a/index.html
+++ b/index.html
@@ -189,15 +189,19 @@
       </font>
     </div><br>
 	<div style="float:left;">
-    	Xiangmin Lun, <strong>Shuyue Jia *</strong>, Yimin Hou, Yan Shi, and Yang Li
-    </div>
+      Xiangmin Lun, <strong>Shuyue Jia *</strong>, Yimin Hou, Yan Shi, and Yang Li
+	</div>
 	<div style="float:right;">
       <a href="./files/GCNs-Net.pdf"><i class="fa fa-file-powerpoint-o"></i> Presentation</a>
       <a href="./files/Dynamic-GCN-Survey.pdf"><i class="fa fa-file-powerpoint-o"></i> Survey</a>
+    </div><br>
+	<div style="float:left;">
+      <em>arXiv preprint arXiv:2006.08924</em>, 2020.
+    </div>
+	<div style="float:right;">
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://arxiv.org/abs/2006.08924"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
-    </div>
-    <em><br>arXiv preprint arXiv:2006.08924</em>, 2020.
+    </div><br><br>
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
