--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 <p><img class="profile-picture" src="./imgs/profile.jpg" /></p>
 
 <p>
-  I earned my B.Eng. degree from School of Automation Engineering at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> (NEEPU) in Jilin, China (2020).
-  During college, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> (UCI) in CA, USA.
+	I'm currently a first-year M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a> (CityU).
+	Previously, I earned my B.Eng. degree from School of Automation Engineering at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> (NEEPU) in Jilin, China (2020).
+	During college, I also attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> (UCI) in CA, USA.
   
   <br />
   <br />
