--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Shuyue Jia, Shuyue, shuyue, shuyue jia, jia shuyue, jiashuyue, 贾舒越, 舒越, 舒越贾, 贾 舒越, 舒越 贾, shuyu jia, jia shuyu, 舒, 越, 贾, 贾舒, 贾越, 贾 舒 越, SHUYUE JIA, SHUYUE, JIA SHUYUE, JIASHUYUE, SHU, YUE, JIA, JIASHU, JIA SHU, JIA SHU YUE, ">
     <meta name="author" content="Shuyue Jia">
-    <meta name="description" content="This is Shuyue Jia's Homepage!">
+    <meta name="description" content="This is Shuyue Jia's Homepage! (Reference: Shuyue Jia, Shuyue, shuyue, shuyue jia, jia shuyue, jiashuyue, 贾舒越, 舒越, 舒越贾, 贾 舒越, 舒越 贾, shuyu jia, jia shuyu, 舒, 越, 贾, 贾舒, 贾越, 贾 舒 越, SHUYUE JIA, SHUYUE, JIA SHUYUE, JIASHUYUE, SHU, YUE, JIA, JIASHU, JIA SHU, JIA SHU YUE, )">
     <meta name="google-site-verification" content="UZ7grdeibwJYn35EsW-Yp0Ky7_vuMG45bHI1kki15H0" />
     <meta name="baidu-site-verification" content="WJpwHTPWUq" />
 	
