--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
   <br />
   <br />
  
-  My research focuses on Machine Learning, including Graph Neural Networks, and Reinforcement Learning.
+  My research focuses on Computer Vision and Machine Learning, and my graduate project is Image Quality Assessment and Optimization.
+  <br /> 
+  <br />
   Some of my paper survey presentations can be found
-	
+
   <br />
   
   <details>
