--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <!--Web Title Shown-->
 <head>
-    <title>Bruce Jia 贾舒越</title>
+    <title>Shuyue Jia 贾舒越</title>
 	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +35,7 @@
 <!--Title-->
 <div class="wrapper">
 	<div class="navbar container">
-		<a id="author-name" class="alignable pull-left" style="text-decoration:none"> Bruce Jia</a>
+		<a id="author-name" class="alignable pull-left" style="text-decoration:none"> Shuyue Jia</a>
 		<a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog"> Blog</a>
 	</div>
 	
@@ -51,16 +51,17 @@
 <p><img class="profile-picture" src="./imgs/profile.jpg" /></p>
 
 <p>
-	I'm currently a first-year M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a> (CityU).
-	Previously, I earned my B.Eng. degree from School of Automation Engineering at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> (NEEPU) in Jilin, China (2020).
+	I'm currently a first-year M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a> (CityU) in Hong Kong, China, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. Previously, I earned my B.Eng. degree from School of Automation Engineering at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> (NEEPU) in Jilin, China (2020). My supervisor is <a href="https://dblp.org/pid/81/6470.html">Prof. Yimin Hou</a>.
 	During college, I also attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> (UCI) in CA, USA.
   
   <br />
   <br />
  
-  My research focuses on Computer Vision and Machine Learning, and my graduate project is Image Quality Assessment and Optimization.
+  My research focuses on Computer Vision and Machine Learning, and my current project is Image Quality Assessment and Perceptual Optimization.
+	
   <br /> 
   <br />
+
   Some of my paper survey presentations can be found
 
   <br />
@@ -344,7 +345,7 @@
 <!--Academic Services-->
 <h2 id="Academic Services">Academic Services</h2>
 <ol>
-	<li><a href="https://publons.com/researcher/4330829/shuyue-jia/"><strong>Reviewer</strong></a> of <em>IEEE Journal of Biomedical and Health Informatics</em><br></li>
+	<li><a href="https://publons.com/researcher/4330829/shuyue-jia/"><strong>Reviewer</strong></a> for <em>IEEE Journal of Biomedical and Health Informatics</em><br></li>
 	<li><strong>Student Member</strong> of <em>IEEE</em>, <em>ACM</em>, and <em>CCF</em></li>
 </ol>
 
