--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 <p><img class="profile-picture" src="./imgs/profile.jpg" /></p>
 
 <p>
-	I'm currently a first-year M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a> (CityU) in Hong Kong, China, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. Previously, I earned my B.Eng. degree from School of Automation Engineering at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> (NEEPU) in Jilin, China (2020). My supervisor is <a href="https://dblp.org/pid/81/6470.html">Prof. Yimin Hou</a>.
-	During college, I also attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> (UCI) in CA, USA.
+	I'm currently a first-year M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong (CityU)</a> in Hong Kong, China, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. Previously, I earned my B.Eng. degree from School of Automation Engineering at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University (NEEPU)</a> in Jilin, China (2020). My supervisor is <a href="https://dblp.org/pid/81/6470.html">Prof. Yimin Hou</a>. During college, I also attended a summer school at <a href="https://uci.edu/">University of California, Irvine (UC Irvine)</a> in CA, USA.
   
   <br />
   <br />
@@ -433,8 +432,8 @@
 
 </body>
 <footer style="text-align:center">
-	Last update: Feb 25th, 2021<br>
-	<span>Copyright &copy;2021 Shuyue Jia</span>
+	Last update: Jun 9th, 2021<br>
+	<span>Copyright &copy;2020 Shuyue Jia</span>
 </footer>
 
 <br>
