--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   
   <br />
   
-  Email: <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a><br>
+  Email: <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a>, or <a href="mailto:shuyuejia3-c@my.cityu.edu.hk">shuyuejia3-c@my.cityu.edu.hk</a><br>
   
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en&authuser=1"><i class="ai ai-google-scholar-square ai-1x"></i> Google Scholar</a> &nbsp
   <a href="https://www.facebook.com/shuyuej/"><i class="fab fa fa-facebook-official"></i> Facebook</a> &nbsp
