--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 <p><img class="profile-picture" src="./imgs/profile.jpg" /></p>
 
 <p>
-	I'm currently a first-year M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong (CityU)</a> in Hong Kong, China, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. Previously, I earned my B.Eng. degree from School of Automation Engineering at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University (NEEPU)</a> in Jilin, China (2020). My supervisor is <a href="https://dblp.org/pid/81/6470.html">Prof. Yimin Hou</a>. During college, I also attended a summer school at <a href="https://uci.edu/">University of California, Irvine (UC Irvine)</a> in CA, USA.
+	I am a first-year M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, where I am fortunate to be advised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. In summer 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA. 
+	Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://dblp.org/pid/81/6470.html">Prof. Yimin Hou</a>.
   
   <br />
   <br />
@@ -61,7 +62,7 @@
   <br /> 
   <br />
 
-  Some of my paper survey presentations can be found
+  Some of my paper survey and presentations can be found
 
   <br />
   
@@ -89,7 +90,7 @@
   
   <br />
   
-  Email: <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a>, or <a href="mailto:shuyuejia3-c@my.cityu.edu.hk">shuyuejia3-c@my.cityu.edu.hk</a><br>
+  Email: <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a> or <a href="mailto:shuyue.jia@my.cityu.edu.hk">shuyue.jia@my.cityu.edu.hk</a><br>
   
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en&authuser=1"><i class="ai ai-google-scholar-square ai-1x"></i> Google Scholar</a> &nbsp
   <a href="https://www.facebook.com/shuyuej/"><i class="fab fa fa-facebook-official"></i> Facebook</a> &nbsp
@@ -434,7 +435,7 @@
 	Last update: Jun 9th, 2021<br>
 	<span>Copyright &copy;2020 Shuyue Jia</span>
 </footer>
-
+	
 <br>
 <br>
 <br>
