--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!--Title-->
 <div class="wrapper">
 	<div class="navbar container">
-		<a id="author-name" class="alignable pull-left" style="text-decoration:none"> Shuyue Jia</a>
+		<a id="author-name" class="alignable pull-left" style="text-decoration:none"> Shuyue Jia 贾舒越</a>
 		<a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog"> Blog</a>
 	</div>
 	
