--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
   
   <br />
   
-  Email: <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a> or <a href="mailto:shuyue.jia@my.cityu.edu.hk">shuyue.jia@my.cityu.edu.hk</a><br>
+  Email: <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a> or <a href="mailto:shuyue.jia@my.cityu.edu.hk">shuyue.jia@my.cityu.edu.hk</a><br><br>
   
-  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en&authuser=1"><i class="ai ai-google-scholar-square ai-1x"></i> Google Scholar</a> &nbsp
-  <a href="https://www.facebook.com/shuyuej/"><i class="fab fa fa-facebook-official"></i> Facebook</a> &nbsp
-  <a href="https://www.linkedin.com/in/shuyuej/"><i class="fab fa fa-linkedin"></i> LinkedIn</a> &nbsp
-  <a href="./CV-Latex/ShuyueJia-CV.pdf"> <i class="fab fa fa-file-pdf-o"></i> Resume</a> &nbsp
+  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en&authuser=1"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a> &nbsp
+<!--  <a href="https://www.facebook.com/shuyuej/"><i class="fab fa fa-facebook-official"></i> Facebook</a> &nbsp-->
+<!--  <a href="https://www.linkedin.com/in/shuyuej/"><i class="fab fa fa-linkedin"></i> LinkedIn</a> &nbsp-->
+  <a href="./CV-Latex/ShuyueJia-CV.pdf"> <i class="fab fa fa-file-pdf-o"></i> résumé</a> &nbsp
   <a href="https://github.com/SuperBruceJia"><i class="fab fa fa-github"></i> GitHub</a> 
   <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
   <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>&nbsp
@@ -105,8 +105,8 @@
 <h2 id="news">News</h2>
 
 <ul style="list-style:none; margin:0; padding:0">
-  <li><strong>Oct 2020</strong> Recommendation System Research Intern at <a href="https://www.tencent.com/en-us/about.html"> Tencent</a>, Beijing.</li>
-  <li><strong>Jul 2020</strong> NLP Research Intern at <a href="https://www.philips.com/a-w/research/locations/shanghai.html"> Philips Research</a>, Shanghai.</li>
+  <li><strong>Oct 2020</strong> Recommendation System Intern at <a href="https://www.tencent.com/en-us/about.html"> Tencent Video</a>, Beijing.</li>
+  <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/research/locations/shanghai.html"> Philips Research</a>, Shanghai.</li>
   <li>
     <strong>Apr 2020</strong> Open Source <a href="https://github.com/SuperBruceJia/EEG-DL"> EEG-DL</a>, 
     a Deep Learning (DL) library written by TensorFlow for EEG Signals Classification (Undergraduate Thesis Project)
