--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en&authuser=1"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a> &nbsp
 <!--  <a href="https://www.facebook.com/shuyuej/"><i class="fab fa fa-facebook-official"></i> Facebook</a> &nbsp-->
 <!--  <a href="https://www.linkedin.com/in/shuyuej/"><i class="fab fa fa-linkedin"></i> LinkedIn</a> &nbsp-->
-  <a href="./CV-Latex/ShuyueJia-CV.pdf"> <i class="fab fa fa-file-pdf-o"></i> résumé</a> &nbsp
+  <a href="./CV-Latex/ShuyueJia-CV.pdf"> <i class="fab fa fa-file-pdf-o"></i> Résumé</a> &nbsp
   <a href="https://github.com/SuperBruceJia"><i class="fab fa fa-github"></i> GitHub</a> 
   <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
   <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>&nbsp
