--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <br />
   <br />
  
-  My research focuses on Computer Vision and Machine Learning, and my current concentration is <b>Image and Video Quality Assessment</b> and <b>Perceptual Optimization</b>.
+  My research focuses on Computer Vision and Machine Learning, and my current concentration is Image and Video Quality Assessment and Perceptual Optimization.
 	
   <br /> 
   <br />
