--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
       	<li><a href="./files/Concept-Matching.pdf"> <i class="fab fa fa-file-pdf-o"></i> Concept Matching for Medical Terms</a></li>
 
       <p>Computer Vision (CV)</p>
+		<li><a href="./files/Model-Compression-Acceleration.pdf"> <i class="fab fa fa-file-pdf-o"></i> Deep Learning Models Compression and Acceleration</a></li>
       	<li><a href="./files/Spatial-Sparse-CNNs.pdf"> <i class="fab fa fa-file-pdf-o"></i> 3D Human Pose Estimation and Human Body Reconstruction</a></li>
-      	<li><a href="./files/YOLO.pdf"> <i class="fab fa fa-file-pdf-o"></i> YOLO Object Detection Algorithm</a></li>
-
+      	<li><a href="./files/YOLO.pdf"> <i class="fab fa fa-file-pdf-o"></i> YOLO Object Detection</a></li>
+	
       <p>Other Tutorials</p>
       	<li><a href="./files/Server.pdf"> <i class="fab fa fa-file-pdf-o"></i> Usage of Cloud Server and Setting-up</a></li>
       	<li><a href="./files/Python.pdf"> <i class="fab fa fa-file-pdf-o"></i> Python Environment Setting-up</a></li>
@@ -92,8 +93,6 @@
   Email: <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a> or <a href="mailto:shuyue.jia@my.cityu.edu.hk">shuyue.jia@my.cityu.edu.hk</a><br>
   
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en&authuser=1"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a> &nbsp
-<!--  <a href="https://www.facebook.com/shuyuej/"><i class="fab fa fa-facebook-official"></i> Facebook</a> &nbsp-->
-<!--  <a href="https://www.linkedin.com/in/shuyuej/"><i class="fab fa fa-linkedin"></i> LinkedIn</a> &nbsp-->
   <a href="./CV-Latex/ShuyueJia-CV.pdf"> <i class="fab fa fa-file-pdf-o"></i> Résumé</a> &nbsp
   <a href="https://github.com/SuperBruceJia"><i class="fab fa fa-github"></i> GitHub</a> 
   <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
