--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <br />
   <br />
  
-  My research focuses on Computer Vision and Machine Learning, and my current concentration is Image and Video Quality Assessment and Perceptual Optimization.
+  My research focuses on Computer Vision and Machine Learning, and my current concentration is Image Quality Assessment and Perceptual Optimization. I always aim to use what I have learned to have a positive impact on people's lives.
   
   <br /> 
   <br />
