--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!--Title-->
 <div class="wrapper">
 	<div class="navbar container">
-		<a id="author-name" class="alignable pull-left" style="text-decoration:none"> Shuyue Jia 贾舒越</a>
+		<a id="author-name" class="alignable pull-left" style="text-decoration:none"> Shuyue Jia</a>
 		<a id="blog" class="alignable pull-right" style="text-decoration:none" href="https://shuyuej.com/blog"> Blog</a>
 	</div>
 	
@@ -48,14 +48,15 @@
 <!--Short Bio Information-->
 <h2 id="about-me">Bio</h2>
 
-<p><img class="profile-picture" src="./imgs/profile.jpg" /></p>
+<p><img class="profile-picture" src="./imgs/profile2.jpg" /></p>
 
 <p>
-	I am a first-year M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, where I am fortunate to be advised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. In summer 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a>.
+	I am a first-year M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, where I am fortunate to be advised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. In summer 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a>. I always aim to use what I have learned to bring a positive impact on people's lives.
+  
   <br />
   <br />
  
-  My research focuses on Computer Vision and Graph Deep Learning, and my current concentration is Image Quality Assessment and Perceptual Optimization. I always aim to use what I have learned to bring a positive impact on people's lives.
+  My research focuses on Computer Vision and Graph Deep Learning, and my current concentration is Image Quality Assessment and Perceptual Optimization.
   
   <br /> 
   <br />
