--- a/index.html
+++ b/index.html
@@ -432,6 +432,9 @@
         <div style="text-align:center">
           <img width="99%device-width" src="./imgs/marathon2021.jpg" alt="marathon-2021">
         </div>
+        <div style="text-align:center">
+          <img width="99%device-width" src="./imgs/cityu-deligation-2021.jpg" alt="marathon-2021">
+        </div>
       </div>
     </details>
   </li>
