--- a/index.html
+++ b/index.html
@@ -68,23 +68,24 @@
       <summary style="outline:none">here</summary>
       
       <p>Graph Neural Network (GNN)</p>
-      	<li><a href="./files/Dynamic-GCN-Survey.pdf"> <i class="fab fa fa-file-pdf-o" style="text-decoration:none"></i> Dynamic Graph Convolutional Neural Networks Survey</a></li>
-      	<li><a href="./files/GCNs-Net.pdf"> <i class="fab fa fa-file-pdf-o"></i> Graph Convolutional Neural Networks (Chebyshev Approximation)</a></li>
-	  
+        <li><a href="./files/Dynamic-GCN-Survey.pdf"> <i class="fab fa fa-file-pdf-o" style="text-decoration:none"></i> Dynamic Graph Convolutional Neural Networks Survey</a></li>
+        <li><a href="./files/GCNs-Net.pdf"> <i class="fab fa fa-file-pdf-o"></i> Graph Convolutional Neural Networks (Chebyshev Approximation)</a></li>
+      
       <p>Natural Language Processing (NLP)</p>
-      	<li><a href="./files/Graph-Matching-Paper-Survey.pdf"> <i class="fab fa fa-file-pdf-o"></i> Graph Matching</a></li>
-      	<li><a href="./files/NMT-Subword-Unites.pdf"> <i class="fab fa fa-file-pdf-o"></i> Sub-word BPE Algorithm for NMT</a></li>
-      	<li><a href="./files/Concept-Matching.pdf"> <i class="fab fa fa-file-pdf-o"></i> Concept Matching for Medical Terms</a></li>
+        <li><a href="./files/Graph-Matching-Paper-Survey.pdf"> <i class="fab fa fa-file-pdf-o"></i> Graph Matching</a></li>
+        <li><a href="./files/NMT-Subword-Unites.pdf"> <i class="fab fa fa-file-pdf-o"></i> Sub-word BPE Algorithm for NMT</a></li>
+        <li><a href="./files/Concept-Matching.pdf"> <i class="fab fa fa-file-pdf-o"></i> Concept Matching for Medical Terms</a></li>
 
       <p>Computer Vision (CV)</p>
-		<li><a href="./files/Model-Compression-Acceleration.pdf"> <i class="fab fa fa-file-pdf-o"></i> Deep Learning Models Compression and Acceleration</a></li>
-      	<li><a href="./files/Spatial-Sparse-CNNs.pdf"> <i class="fab fa fa-file-pdf-o"></i> 3D Human Pose Estimation and Human Body Reconstruction</a></li>
-      	<li><a href="./files/YOLO.pdf"> <i class="fab fa fa-file-pdf-o"></i> YOLO Object Detection</a></li>
-	
+        <li><a href="./files/Model-Compression-Acceleration.pdf"> <i class="fab fa fa-file-pdf-o"></i> Deep Learning Models Compression and Acceleration</a></li>
+        <li><a href="./files/Spatial-Sparse-CNNs.pdf"> <i class="fab fa fa-file-pdf-o"></i> 3D Human Pose Estimation and Human Body Reconstruction</a></li>
+        <li><a href="./files/YOLO.pdf"> <i class="fab fa fa-file-pdf-o"></i> YOLO Object Detection</a></li>
+
       <p>Other Tutorials</p>
-      	<li><a href="./files/Server.pdf"> <i class="fab fa fa-file-pdf-o"></i> Usage of Cloud Server and Setting-up</a></li>
-      	<li><a href="./files/Python.pdf"> <i class="fab fa fa-file-pdf-o"></i> Python Environment Setting-up</a></li>
-      	<li><a href="./files/TensorFlow.pdf"> <i class="fab fa fa-file-pdf-o"></i> TensorFlow for Deep Learning</a></li>
+        <li><a href="./files/Server.pdf"> <i class="fab fa fa-file-pdf-o"></i> Usage of Cloud Server and Setting-up</a></li>
+        <li><a href="./files/Python.pdf"> <i class="fab fa fa-file-pdf-o"></i> Python Environment Setting-up</a></li>
+        <li><a href="./files/TensorFlow.pdf"> <i class="fab fa fa-file-pdf-o"></i> TensorFlow for Deep Learning</a></li>
+        <li><a href="./files/Crypto-currency-Return-and-Price-Prediction-with-Machine-Learning.pdf"> <i class="fab fa fa-file-pdf-o"></i> Crypto currency Return and Price Prediction with Machine Learning</a></li>
   </details>
   
   <br />
