--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <li><a href="./files/Python.pdf"> <i class="fab fa fa-file-pdf-o"></i> Python Environment Setting-up</a></li>
         <li><a href="./files/TensorFlow.pdf"> <i class="fab fa fa-file-pdf-o"></i> TensorFlow for Deep Learning</a></li>
         <li><a href="./files/Crypto-currency-Return-and-Price-Prediction-with-Machine-Learning.pdf"> <i class="fab fa fa-file-pdf-o"></i> Crypto currency Return and Price Prediction with Machine Learning</a></li>
+        <li><a href="./files/PySpark-and-Horovod.pdf"> <i class="fab fa fa-file-pdf-o"></i> Big Data Parallel Processing by PySpark and Horovod Distributed Deep Learning</a></li>
   </details>
   
   <br />
