--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <a href="https://github.com/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow"><i class="fab fa fa-github"></i> Codes</a>
       <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
-    Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, and Xiangmin Lun
+    Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, Xiangmin Lun
     <em><br>Journal of Neural Engineering</em>, 2020; 17(1):016048.
     <details>
       <summary style="outline:none">See More</summary>
