--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
 <h2 id="news">News</h2>
 
 <ul style="list-style:none; margin:0; padding:0">
-  <li><strong>Oct 2020</strong> Recommendation System Intern at <a href="https://www.tencent.com/en-us/about.html"> Tencent Video</a>, Beijing.</li>
+<!--  <li><strong>Oct 2020</strong> Recommendation System Intern at <a href="https://www.tencent.com/en-us/about.html"> Tencent Video</a>, Beijing.</li>-->
   <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/research/locations/shanghai.html"> Philips Research</a>, Shanghai.</li>
   <li>
     <strong>Apr 2020</strong> Open Source <a href="https://github.com/SuperBruceJia/EEG-DL"> EEG-DL</a>, 
-    a Deep Learning (DL) library written by TensorFlow for EEG Signals Classification (Undergraduate Thesis Project)
+    a Deep Learning (DL) library written by TensorFlow for EEG Signals Classification
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/EEG-DL?style=social" 
       frameborder="0" scrolling="0" width="90px" height="20px">
@@ -132,7 +132,7 @@
       frameborder="0" scrolling="0" width="85px" height="20px">
     </iframe>.
   </li>
-  <li><strong>Jun 2019</strong> Summer Intern at <a href="http://www.csai.tsinghua.edu.cn/"> Tsinghua University</a>, Beijing.</li>
+<!--  <li><strong>Jun 2019</strong> Summer Intern at <a href="http://www.csai.tsinghua.edu.cn/"> Tsinghua University</a>, Beijing.</li>-->
 </ul>
 
 <!--Recent Publications-->
