--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
       <a href="https://github.com/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow"><i class="fab fa fa-github"></i> Codes</a>
       <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
-    Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, Xiangmin Lun
-    <em><br>Journal of Neural Engineering</em>, 2020; 17(1):016048.
+    Yimin Hou, Lu Zhou, Shuyue Jia, Xiangmin Lun
+    <strong><em><br>Journal of Neural Engineering</em></strong>, 2020; 17(1):016048.
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -191,7 +191,7 @@
       <font color="#00066f">Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition</font>
     </div><br>
     <div style="float:left;">
-      Yimin Hou, <strong>Shuyue Jia</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
+      Yimin Hou, Shuyue Jia, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
     </div>
     <div style="float:right;">
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
@@ -240,7 +240,7 @@
       </font>
     </div><br>
     <div style="float:left;">
-      Yimin Hou, <strong>Shuyue Jia</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
+      Yimin Hou, Shuyue Jia, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
     </div>
     <div style="float:right;">
       <a href="./files/GCNs-Net.pdf"><i class="fa fa-file-powerpoint-o"></i> Presentation</a>
