--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 <!--  </li>-->
 
 <!--  ####################################################################################################################################################-->
-<!--<hr>-->
+<!--  <hr>-->
 </ol>
 
 <!--<ul><b>* denotes the Corresponding Author.</b></ul>-->
@@ -371,6 +371,9 @@
       <div>
         <div style="text-align:center">
           <img width="99%device-width" src="./imgs/marathon2021.jpg" alt="marathon-2021">
+        </div>
+        <div style="text-align:center">
+          <img width="99%device-width" src="./imgs/cityu_marathon_2021.jpg" alt="marathon-2021">
         </div>
         <div style="text-align:center">
           <img width="99%device-width" src="./imgs/cityu-deligation-2021.jpg" alt="marathon-2021">
