--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
       Yimin Hou, Shuyue Jia, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
     </div>
     <div style="float:right;">
+      <a href="./files/Dynamic-GCN-Survey.pdf"><i class="fa fa-file-powerpoint-o"></i> Dynamic GNN Survey</a>
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://arxiv.org/abs/2005.00777"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
@@ -242,14 +243,12 @@
     <div style="float:left;">
       Yimin Hou, Shuyue Jia, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
     </div>
-    <div style="float:right;">
-      <a href="./files/GCNs-Net.pdf"><i class="fa fa-file-powerpoint-o"></i> Presentation</a>
-      <a href="./files/Dynamic-GCN-Survey.pdf"><i class="fa fa-file-powerpoint-o"></i> Survey</a>
-    </div><br>
+    <br>
     <div style="float:left;">
       <em>arXiv preprint arXiv:2006.08924</em>, 2021.
     </div>
     <div style="float:right;">
+      <a href="./files/GCNs-Net.pdf"><i class="fa fa-file-powerpoint-o"></i> Presentation</a>
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://arxiv.org/abs/2006.08924"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br><br>
