--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!--Short Bio Information-->
 <h2 id="about-me">Bio</h2>
 
-<p><img class="profile-picture" src="./imgs/profile2.jpg" /></p>
+<p><img class="profile-picture" src="./imgs/Marathon_Profile.jpg" /></p>
   
 <p>
   I am a first-year M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. In summer 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a>. I always aim to use what I have learned to bring a positive impact on people's lives, and find the courage to make life a blessing.
