--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 
 <ul style="list-style:none; margin:0; padding:0">
 <!--  <li><strong>Oct 2020</strong> Recommendation System Intern at <a href="https://www.tencent.com/en-us/about.html"> Tencent Video</a>, Beijing.</li>-->
+  <li>
+    <strong>Dec 2021</strong> <a href="https://arxiv.org/abs/2005.00777"> One Paper</a> accepted by <em>Frontiers in Neuroscience</em>.
+  </li>
   <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/research/locations/shanghai.html"> Philips Research</a>, Shanghai.</li>
   <li>
     <strong>Apr 2020</strong> Open Source <a href="https://github.com/SuperBruceJia/EEG-DL"> EEG-DL</a>, 
@@ -141,64 +144,17 @@
 <ol>
   <li>
     <div style="float:left;">
-      <font color="#00066f"> 
-        A Novel Approach of Decoding EEG Four-Class Motor Imagery Tasks via Scout ESI and CNN
-      </font>
-    </div>
-    <div style="float:right;">
-      <a href="https://github.com/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow"><i class="fab fa fa-github"></i> Codes</a>
-      <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
-    </div><br>
-    Yimin Hou, Lu Zhou, Shuyue Jia, Xiangmin Lun
-    <strong><em><br>Journal of Neural Engineering</em></strong>, 2020; 17(1):016048.
-    <details>
-      <summary style="outline:none">See More</summary>
-      <ul>
-        We presented a novel approach that could potentially be used to improve the current stroke rehabilitation
-        strategies by implementing a deep learning approach for an Electroencephalogram (EEG) based on MI Brain-Computer Interface System.
-        <ul>
-          <li>
-		      Constructed 6 convolutional layers, 2 max-pooling layers, and 3 FC layers CNNs for four-class motor 
-			  imagery classification through TensorFlow, with 50% dropout (spatial dropout after every Conv layer and regular
-			  dropout for FC layers) &ndash; 11.44% accuracy improvement, batch normalization (BN) &ndash; 10.15% improvement, and Short-cut
-			  Connection &ndash; 1.76% improvement to prevent overfitting, and achieved SOTA results: 94.50% accuracy on scout R5,
-			  94.54% at subject level, and 96% for left fist prediction.
-          </li>
-          <li>
-			  Took charge of DNNs design, including methods comparisons, such as MLPs, CNNs, RNNs, LSTMs, and Autoencoders,
-			  classification results calculations, and programming. 10 and 14 subjects&rsquo; data were utilized (19,320 and
-			  27,048 samples in the experiments)
-          </li>
-          <li>
-			  Benchmark Dataset: <a href="https://archive.physionet.org/pn4/eegmmidb/"> EEG Motor Movement/Imagery Dataset</a>.
-          </li>
-        </ul>
-        <div>
-          <div style="text-align:center">
-            <img width="99%device-width" src="./imgs/Picture1.jpg" alt="EEG-CNN">
-		  </div>
-        </div>
-      </ul>
-    </details>
-  
-  </li>
-	
-<!--  ####################################################################################################################################################-->
-  <hr>
-  
-  <li>
-    <div style="float:left;">
       <font color="#00066f">Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition</font>
     </div><br>
     <div style="float:left;">
-      Yimin Hou, Shuyue Jia, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
+      Yimin Hou, <strong>Shuyue Jia</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
     </div>
     <div style="float:right;">
       <a href="./files/Dynamic-GCN-Survey.pdf"><i class="fa fa-file-powerpoint-o"></i> Dynamic GNN Survey</a>
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://arxiv.org/abs/2005.00777"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <em><br>arXiv preprint arXiv:2005.00777</em>, 2021.
+    <em><br>Frontiers in Neuroscience</em>, 2021 (Accepted).
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -236,6 +192,49 @@
   
   <li>
     <div style="float:left;">
+      <font color="#00066f"> 
+        A Novel Approach of Decoding EEG Four-Class Motor Imagery Tasks via Scout ESI and CNN
+      </font>
+    </div>
+    <div style="float:right;">
+      <a href="https://github.com/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow"><i class="fab fa fa-github"></i> Codes</a>
+      <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+    </div><br>
+    Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, Xiangmin Lun
+    <em><br>Journal of Neural Engineering</em>, 2020; 17(1):016048.
+    <details>
+      <summary style="outline:none">See More</summary>
+      <ul>
+        We presented a novel approach that could potentially be used to improve the current stroke rehabilitation
+        strategies by implementing a deep learning approach for an Electroencephalogram (EEG) based on MI Brain-Computer Interface System.
+        <ul>
+          <li>
+            Constructed 6 convolutional layers, 2 max-pooling layers, and 3 FC layers CNNs for four-class motor imagery classification through TensorFlow, with 50% dropout (spatial dropout after every Conv layer and regular dropout for FC layers) &ndash; 11.44% accuracy improvement, batch normalization (BN) &ndash; 10.15% improvement, and Short-cut Connection &ndash; 1.76% improvement to prevent overfitting, and achieved SOTA results: 94.50% accuracy on scout R5, 94.54% at subject level, and 96% for left fist prediction.
+          </li>
+          <li>
+            Took charge of DNNs design, including methods comparisons, such as MLPs, CNNs, RNNs, LSTMs, and Autoencoders,
+            classification results calculations, and programming. 10 and 14 subjects&rsquo; data were utilized (19,320 and
+            27,048 samples in the experiments)
+          </li>
+          <li>
+            Benchmark Dataset: <a href="https://archive.physionet.org/pn4/eegmmidb/"> EEG Motor Movement/Imagery Dataset</a>.
+          </li>
+        </ul>
+        <div>
+          <div style="text-align:center">
+            <img width="99%device-width" src="./imgs/Picture1.jpg" alt="EEG-CNN">
+          </div>
+        </div>
+      </ul>
+    </details>
+  
+  </li>
+  
+  <!--  ####################################################################################################################################################-->
+  <hr>
+  
+  <li>
+    <div style="float:left;">
       <font color="#00066f">
         GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals
       </font>
@@ -255,20 +254,17 @@
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
-        Based on the Graph Convolutional Neural Network (Graph CNN / GCN), the GCNs-Net was introduced, which filtered the EEG Motor
-        Imagery (MI) signals considering the functional topological relationship of EEG electrodes.
+        Based on the Graph Convolutional Neural Network (Graph CNN / GCN), the GCNs-Net was introduced, which filtered the EEG Motor Imagery (MI) signals considering the functional topological relationship of EEG electrodes.
         <ul>
           <li>
-			  At the subject and group level (subject-specific adaptation), 98.72% and 89.387% accuracy were achieved, respectively.
+            At the subject and group level (subject-specific adaptation), 98.72% and 89.387% accuracy were achieved, respectively.
           </li>
           <li>
-			  Pearson&rsquo;s Matrix was applied to measure the correlations among channels, and represented the graph structure, i.e., graph weights and degrees.
+            Pearson&rsquo;s Matrix was applied to measure the correlations among channels, and represented the graph structure, i.e., graph weights and degrees.
           </li>
           <li>
-			  Benchmark Datasets: <a href="https://archive.physionet.org/pn4/eegmmidb/"> EEG Motor
-              Movement/Imagery Dataset</a>, in which 20 ( a million samples), 50, 100 participants&rsquo; data were used, and
-			  the <a href="https://gin.g-node.org/robintibor/high-gamma-dataset">High-Gamma Dataset</a>, in which 14 
-			  participates' data were used.
+            Benchmark Datasets: <a href="https://archive.physionet.org/pn4/eegmmidb/"> EEG Motor
+              Movement/Imagery Dataset</a>, in which 20 ( a million samples), 50, 100 participants&rsquo; data were used, and the <a href="https://gin.g-node.org/robintibor/high-gamma-dataset">High-Gamma Dataset</a>, in which 14  participates' data were used.
           </li>
         </ul>
         <div>
@@ -279,8 +275,6 @@
       </ul>
     </details>
   </li>
-
-<!--  ####################################################################################################################################################-->
 
 <!--  ####################################################################################################################################################-->
 <!--  <hr>-->
