--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </font>
     </div><br>
     <div style="float:left;">
-      Yimin Hou, Shuyue Jia, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
+      Yimin Hou, <strong>Shuyue Jia</strong>, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv
     </div>
     <br>
     <div style="float:left;">
