--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <br />
   <br />
   
-  My research focuses on Computer Vision and Graph Deep Learning, and my current concentration is Image Quality Assessment and Perceptual Optimization.
+  My research focuses on Computer Vision, Graph Deep Learning, and causal inference, and my current concentration is Image Quality Assessment and Perceptual Optimization.
   
   <br /> 
   <br />
