--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   
   <br>
   
-  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en&authuser=1"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>&nbsp
+  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>&nbsp
 <!--  <?php $lang="en"; $userid="PfpEP60AAAAJ"; $pagesize="100"; include 'css/curl.php'; ?>-->
 <!--  <?php include 'css/citation_chart.php'; ?> -->
 <!--  &nbsp-->
