--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <p><img class="profile-picture" src="./imgs/Marathon_Profile.jpg" /></p>
   
 <p>
-  I am a first-year M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. In summer 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a>. I always aim to use what I have learned to bring a positive impact on people's lives, and find the courage to make life a blessing.
+  I am a first-year M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a>. I always aim to use what I have learned to positively impact people's lives and find the courage to make life a blessing.
   <br />
   <br />
   
@@ -161,17 +161,13 @@
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
-        We introduced a novel approach which combined Attention-based BiLSTM with the Graph Convolutional Neural Network
-        (Graph CNN / GCN). The method has achieved SOTA results.
+        We introduced a novel approach that combined Attention-based BiLSTM with the Graph Convolutional Neural Network (Graph CNN / GCN).
         <ul>
           <li>
-            Open Source <a href="https://github.com/SuperBruceJia/EEG-DL">EEG-DL</a>, a Deep Learning (DL)
-            library written by TensorFlow for EEG Tasks (Signals) Classification.<br>
+            Open Source <a href="https://github.com/SuperBruceJia/EEG-DL">EEG-DL</a>, a Deep Learning (DL) library written by TensorFlow for EEG Tasks (Signals) Classification.<br>
           </li>
           <li>
-            Attention-based BiLSTM was firstly used to extract features from raw EEG signals. The
-            followed GCN model classified the features regarding to four EEG Motor Imagery (MI) tasks, imagining left fist, right fist,
-            both fists, and both feet.
+            Attention-based BiLSTM was firstly used to extract features from raw EEG signals. The followed GCN model classified the features of four EEG Motor Imagery (MI) tasks, imagining left fist, right fist, both fists, and both feet.
           </li>
           <li>
             98.81% and 94.64% accuracies have been achieved for the individual subject and a group of 20 subjects.
@@ -208,14 +204,13 @@
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
-        We presented a novel approach that could potentially be used to improve the current stroke rehabilitation
-        strategies by implementing a deep learning approach for an Electroencephalogram (EEG) based on MI Brain-Computer Interface System.
+        We presented a novel approach that could potentially improve the current stroke rehabilitation strategies by implementing a deep learning approach for an Electroencephalogram (EEG) based on MI Brain-Computer Interface System.
         <ul>
           <li>
             Constructed 6 convolutional layers, 2 max-pooling layers, and 3 FC layers CNNs for four-class motor imagery classification through TensorFlow, with 50% dropout (spatial dropout after every Conv layer and regular dropout for FC layers) &ndash; 11.44% accuracy improvement, batch normalization (BN) &ndash; 10.15% improvement, and Short-cut Connection &ndash; 1.76% improvement to prevent overfitting, and achieved SOTA results: 94.50% accuracy on scout R5, 94.54% at subject level, and 96% for left fist prediction.
           </li>
           <li>
-            Took charge of DNNs design, including methods comparisons, such as MLPs, CNNs, RNNs, LSTMs, and Autoencoders,
+            Took charge of DNNs design, including methods comparisons, such as MLPs, CNNs, RNNs, and LSTMs,
             classification results calculations, and programming. 10 and 14 subjects&rsquo; data were utilized (19,320 and
             27,048 samples in the experiments)
           </li>
