--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 <p><img class="profile-picture" src="./imgs/Marathon_Profile.jpg" /></p>
   
 <p>
-  I am a first-year M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a>. I always aim to use what I have learned to positively impact people's lives and find the courage to make life a blessing.
+  I am a first-year M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. Prior to joining CityU, I received my bachelor's degree at <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a>. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in CA, USA. I was an intern with the medical NLP team at <a href="https://www.philips.com/a-w/research/locations/shanghai.html">Philips Research China</a> in summer 2020. I always aim to use what I have learned to positively impact people's lives and find the courage to make life a blessing.
   <br />
   <br />
   
-  My research focuses on Computer Vision, Graph Deep Learning, and causal inference, and my current concentration is Image Quality Assessment and Perceptual Optimization.
+  My research interests mainly lie in Computer Vision, Graph Deep Learning, and causal inference, and my current concentration is Image Quality Assessment and Perceptual Optimization.
   
   <br /> 
   <br />
